[package]
name = "bonsol_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rouille = "3.0"
solana-sdk = "2.0.23"
solana-client = "2.0.23"
solana-program = "2.0.23"
bonsol_test_program = { path = "program" }
bonsol_test_data = { path = "bonsol_test_data" }
bonsol-schema = { path = "../bonsol/schemas" }

bonsol-interface = { path = "../bonsol/onchain/interface"}
rand = "0.8.5"
shellexpand = "3.1.0"
byteorder = "1.5.0"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10.9"
hex = "0.4.3"

