[package]
name = "bonsol_test_program"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "2.0.23"
bonsol-schema = { path = "../../bonsol/schemas" }
bonsol-interface = { path = "../../bonsol/onchain/interface", features = ["on-chain"],  default-features = false}
hex = "0.4.3"
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
bonsol_test_data = { path = "../bonsol_test_data" }

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]